<resources>
    <string name="app_name">Self Driving Car</string>
    <string name="start">start</string>
    <string name="self_driving_car">Self-Driving Car</string>
    <string name="slow_fast">slow-fast</string>
    <string name="speed">speed:</string>
    <string name="getpicture">getpicture</string>
    <string name="status">STATUS</string>
    <string name="time">time</string>
    <string name="sp">sp</string>
    <string name="st">st</string>
    <string name="txtstatus">status:</string>
    <string name="slow">SLOW</string>
    <string name="fast">FAST</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="nameLogin">Name</string>
<!--    <string name="nameLogin">Name</string>-->
    <string name="passwordLogin">Password</string>
    <string name="buttonLogin">Button</string>
    <string name="textview">TextView</string>
    <string name="getpciture">GETPCITURE</string>
    <string name="reset">reset</string>
    <string name="stop">stop</string>
    <string name="run">run</string>
    <string name="logoappmain">logoapp</string>
</resources>
